--- a/data/chap03.tex
+++ b/data/chap03.tex
@@ -133,7 +133,7 @@
   \includegraphics[width=\textwidth]{ch3/Gw(4).eps}
   \caption{\label{f:Gw1}}
   \end{subfigure}
-  \caption{Distribution of the sensitivity functions (a) $G_u$, (b) $G_v$ and (c) $G_w$ at $x =280$ with the output location at $x =500$.}\label{f:Guvw1}
+  \caption{$x =280$处横截面上流向速度分布云图和三个方向敏感性因子分布等值线： (a) $G_u$, (b) $G_v$ and (c) $G_w$。实线表示正值，虚线表示负值。扰动能量输出位置选取在$x =500$}\label{f:Guvw1}
 \end{figure}
 \begin{figure}[H]
   \centering
@@ -152,7 +152,7 @@
   \includegraphics[width=\textwidth]{ch3/Gw(4)_300.eps}
   \caption{\label{f:Gw1_300}}
   \end{subfigure}
-  \caption{Distribution of the sensitivity functions (a) $G_u$, (b) $G_v$ and (c) $G_w$ at $x =280$ with the output location at $x =300$.}\label{f:Guvw1_300}
+  \caption{$x =280$处横截面上流向速度分布云图和三个方向敏感性因子分布等值线： (a) $G_u$, (b) $G_v$ and (c) $G_w$。实线表示正值，虚线表示负值。扰动能量输出位置选取在$x =300$}\label{f:Guvw1_300}
 \end{figure}
 
 如图\ref{f:Gu1}所示，$G_u$的正值分布在高速条带下方，并且斜着向上延伸，与相邻的低速条带重合。正值区与负值区相间交替出现。图\ref{f:Gv1}中，$G_v$的正值主要集中在低速条带出现的区域，而高速条带位置主要是负值。这意味着如果想要通过法向激励的方式，比如壁面垂直吹吸之类的方法控制失稳，那么就需要在低速条带下面吸气，在高速条带下面吹气。$G_v$的0值等值线并不像$G_u$和$G_w$的0值等值线那样扭曲。$G_w$的分布情况基本与$G_u$类似，只是正负值分布的区域做了交换。在D\"orr和Kloker\cite{dorr2016}提出的等离子体控制方法中，他们有两个基础的控制算例分别叫做ACF和CCF。这两个控制算例的计算结果展示在他们文章的Fig 4 中。在ACF算例，有着展向正方向分量的体积力被施加在了横流涡下方，也就是图\ref{f:Gw1}所示的$G_w$恰好是负值的位置。在他们的算例CCF中，有着与ACF中体积力相反方向的体积力被施加在了二次涡出现的位置，也就是图\ref{f:Guvw1_300}中所示高速条带的位置。这里一位置的$G_w$恰好是正的。从式（\ref{e:adjointresult}）可知，负的敏感因子乘上正的体积力，或者是正的敏感因子乘上负的体积力，都可以得到负的扰动能量变化，也就是使得扰动变弱。D\"orr和Kloker\cite{dorr2016}的结果也印证了这里敏感性分析的结论。在下一小节的等离子体控制算例的结果，也会对本文推倒的敏感性分析做相关的印证。
@@ -163,7 +163,7 @@
   \centering
   % Requires \usepackage{graphicx}
   \includegraphics[width=\textwidth]{ch3/Gw_xz.eps}\\
-  \caption{Distribution of sensitivity functions $G_w$ at $y=1$}\label{f:Gw_xz}
+  \caption{展向敏感性因子$G_w$在$y=1$平面上的等值线（颜色为流向速度云图）}\label{f:Gw_xz}
 \end{figure}
 
 图\ref{f:Gw_xz}给出了靠近壁面$z-x$平面上，展向敏感因子$G_w$的分布等值线和流向速度分布云图。从图中可以清楚的看到高低速条带的相间分布。其中红色代表着高速条带，蓝色代表着低速条带。在远离输出位置的区域内，可以看到$G_w$的等值线基本上与条带平行。不平行的区域只有大约不到40的无量纲长度。这意味着最佳的等离子激发器布置方案也应该是平行于高低速条带，也就是平行于横流涡轴。这样可以保证在每一个横截面内，激发器产生的体积力都处在流动最敏感的区域内。D\"orr和Klocker \cite{dorr2015stabilisation,dorr2016}提出的控制方法就总是让激发器平行于横流涡轴。
@@ -188,13 +188,13 @@
   \includegraphics[width=0.8\textwidth]{ch3/maxGw_xy.eps}
   \caption{\label{f:Gw_xy}}
   \end{subfigure}
-  \caption{Contours of maximum (a) $G_u$, (b) $G_v$ and (c) $G_w$ along the Z direction with the output location at x=500.}\label{f:Guvw_xy}
+  \caption{敏感性因子展向最大值在$x-y$平面上的分布云图 (a) $G_u$, (b) $G_v$ and (c) $G_w$ 。输出位置选取在$x=500$}\label{f:Guvw_xy}
 \end{figure}
 \begin{figure}[htb]
   \centering
   % Requires \usepackage{graphicx}
   \includegraphics[width=0.8\textwidth]{ch3/maxG(3).eps}\\
-  \caption{Streamwise distributions of the maximum value of the sensitivity functions on the y-z plane}\label{f:maxsen}
+  \caption{不同横截面上敏感性因子的最大值在流向分布变化}\label{f:maxsen}
 \end{figure}
 
 \section{采用等离子体激发器推迟后掠Hiemenz流动转捩}
@@ -209,43 +209,44 @@
 
 图\ref{f:spanwiselocations}给出了不同算例中等离子体激发器产生的体积力和横流涡的展向位置关系。这里列出的激发器的展向位置分别在$z/T_z = 0.5, 0.6, 0.7, 0.8, 0.9, 1.0$，本文之后简记为算Case（a）-（f）。由于横流涡是斜的，所以在不同的流向界面上，横流涡所处的展向位置并不相同。也就是说单说展向坐标并没有实际意义，关注的主要应该放在体积力和横流涡的相对位置上。图中的颜色云图是体积力的分布，截掉了小于最大值10\%的颜色。图中的线是流向速度的等值线，可以看到横流涡将壁面的低速流动卷起并翻转。等离子体在流向的激励区域用两个蓝色的点表示出来。这里模态还是用频率-展向波数来表示。由于本文针对的还都是驻涡模态，所以第一个数字都是零。第二个数据表示模态展向波数相对于主模态展向波数的倍数。如之前提到的(0,0)模态即为基本流修正模态，(0,1)是主模态，(0,2)是半波长的次谐波模态。从图\ref{f:spanwiseeffect}中可以看到，主模态的演化规律和之前敏感性分析预测的结果吻合：在Cases(d)和(e)中，主模态能量大幅下降，而这时体积力的位置正好在横流涡的下方，也就是之前敏感性分析得到的$G_w$为负值的区域。在这两个算例中，主模态的能量分别降到了0.0067和0.0077。然而在Cases(a)到(d)中，(0,2)模态被促进了，这和D\"orr与Kloker\cite{dorr2016}在他们的DNS的结果中观察到的相同（他们文章中的Fig 8）。在有些算例中（图\ref{f:d}），(0,2)模态的能量甚至超过了主模态的能量。不过，在Cases(e)和(f)中，并没有出现(0,2)模态被促进这一现象。所以，半波长模态能量的增加并不是所有算例共有的特性，通过调整激发器的展向位置，是可以有效降低所有模态的能量的。在图中所示的算例中，可以看到激发器在$z/Tz=0.9$效果最好。需要提一下的是，D\"orr和Kloker的 DNS\cite{dorr2016}结果中，所有算例里(0,2)模态都被激发了。
 
+
 \begin{figure}[H]
     \centering
     \begin{subfigure}{0.45\textwidth}           %
         \includegraphics[width=\linewidth]{ch3/comparemodes(a).eps}
-        \caption{}\label{f:a}
+        \caption{$z/T_z = 0.5$}\label{f:a}
     \end{subfigure}
     %\\ \bigskip
     \begin{subfigure}{0.45\textwidth}           %
         %% label for first subfigure
         \includegraphics[width=\linewidth]{ch3/comparemodes(b).eps}
-        \caption{}\label{f:b}%\includegraphics[width=0.45\linewidth]{forceposition(b)}} \\
+        \caption{$z/T_z = 0.6$}\label{f:b} 
     \end{subfigure}
     \\ \bigskip
     \begin{subfigure}{0.45\textwidth}         %
         %% label for first subfigure
         \includegraphics[width=\linewidth]{ch3/comparemodes(c).eps}
-        \caption{}\label{f:c}%\includegraphics[width=0.45\linewidth]{forceposition(c)}}
+        \caption{$z/T_z = 0.7$}\label{f:c}
     \end{subfigure}
     %\\ \bigskip
     \begin{subfigure}{0.45\textwidth}          %
         %% label for first subfigure
         \includegraphics[width=\linewidth]{ch3/comparemodes(d).eps}
-        \caption{}\label{f:d}
+        \caption{$z/T_z = 0.8$}\label{f:d}
     \end{subfigure}
     \\ \bigskip
     \begin{subfigure}{0.45\textwidth}         %
         %% label for first subfigure
         \includegraphics[width=\linewidth]{ch3/comparemodes(e).eps}
-        \caption{}\label{f:e}
+        \caption{$z/T_z = 0.9$}\label{f:e}
     \end{subfigure}
     %\\ \bigskip
     \begin{subfigure}{0.45\textwidth}          %
         %% label for first subfigure
         \includegraphics[width=\linewidth]{ch3/comparemodes(f).eps}
-        \caption{}\label{f:f}
+        \caption{$z/T_z = 1.0$}\label{f:f}
     \end{subfigure}
-    \caption{Comparison of the streamwise mode-energy evolution with the actuator imposed at different spanwise locations: (a) $z/T_z = 0.5$, (b) $z/T_z = 0.6$, (c) $z/T_z = 0.7$, (d) $z/T_z = 0.8$, (e) $z/T_z = 0.9$, (f) $z/T_z = 1.0$.}
+    \caption{激发器位于不同的位置时，各阶失稳模态能量的演化}
     \label{f:spanwiseeffect} %% label for entire figure
 \end{figure}
 \begin{figure}[H]
@@ -254,76 +255,63 @@
         %% label for first subfigure
         %\includegraphics[width=0.3\linewidth]{comparemodes(a)}}
         \includegraphics[width=\linewidth]{ch3/forceposition(a).eps}
-        \caption{}\label{f:a1}
+        \caption{$z/T_z = 0.5$}\label{f:a1}
     \end{subfigure}
     \begin{subfigure}{0.45\textwidth}
         %% label for first subfigure
         %\includegraphics[width=0.3\linewidth]{comparemodes(b)}}
         \includegraphics[width=\linewidth]{ch3/forceposition(b).eps}
-        \caption{}\label{f:b1}
+        \caption{$z/T_z = 0.6$}\label{f:b1}
     \end{subfigure}
     \\ \bigskip
     \begin{subfigure}{0.45\textwidth}         %
         %% label for first subfigure
         %\includegraphics[width=0.3\linewidth]{comparemodes(c)}} \\
         \includegraphics[width=\linewidth]{ch3/forceposition(c).eps}
-        \caption{}\label{f:c1}
+        \caption{$z/T_z = 0.7$}\label{f:c1}
     \end{subfigure}
     \begin{subfigure}{0.45\textwidth}          %
         %% label for first subfigure
         \includegraphics[width=\linewidth]{ch3/forceposition(d).eps}
-        \caption{}\label{f:d1}
+        \caption{$z/T_z = 0.8$}\label{f:d1}
     \end{subfigure}
     \\ \bigskip
     \begin{subfigure}{0.45\textwidth}          %
         %% label for first subfigure
         \includegraphics[width=\linewidth]{ch3/forceposition(e).eps}
-        \caption{}\label{f:e1}
+        \caption{$z/T_z = 0.9$}\label{f:e1}
     \end{subfigure}
     \begin{subfigure}{0.45\textwidth}          %
         %% label for first subfigure
         \includegraphics[width=\linewidth]{ch3/forceposition(f).eps}
-        \caption{}\label{f:f1}
+        \caption{$z/T_z = 1.0$}\label{f:f1}
     \end{subfigure}
-    \caption{Comparison of the streamwise mode-energy evolution with the actuator imposed at different spanwise locations: (a) $z/T_z = 0.5$, (b) $z/T_z = 0.6$, (c) $z/T_z = 0.7$, (d) $z/T_z = 0.8$, (e) $z/T_z = 0.9$, (f) $z/T_z = 1.0$.}
+    \caption{不同算例中体积力与原横流涡位置关系。颜色云图为体积力分布，曲线为无控制的流向速度等值线}
     \label{f:spanwiselocations} %% label for entire figure
 \end{figure}
 \begin{figure}[htb]
   \centering
   % Requires \usepackage{graphicx}
   \includegraphics[width=\linewidth]{ch3/compare160427-enegy(1).eps}\\
-  \caption{Comparison of control cases with actuators put on different streamwise location}\label{f:streamforce}
+  \caption{激发器位于不同的流向位置控制效果对比（主模态能量对比）}\label{f:streamforce}
 \end{figure}
 \begin{figure}
   \centering
   % Requires \usepackage{graphicx}
   \includegraphics[width=0.6\linewidth]{ch3/compare160427-vmax.eps}\\
-  \caption{Differences of maximum streamwise velocity of primary mode between uncontrolled and controlled cases in the control regions ($x_{\rm start}$: start point of control region)}\label{f:streamforce2}
+  \caption{激发器位于不同的流向位置控制效果对比。横轴为据控制起始位置$x_{\rm start}$的距离，纵轴为控制后主模态幅值与无控制主模态幅值之差}\label{f:streamforce2}
 \end{figure}
 
-The optimal spanwise location of the plasma actuators is used to investigate their streamwise location effect on transition using NPSE. In sensitivity analyses, a plasma actuator location upstream as possible without contaminating the quiet boundary layer is suggested. Figure \ref{f:streamforce} compares the streamwise mode-energy evolution within different streamwise actuation regions. The actuation regions have the same extent (shown between the two large dots) but different start points, $x_{start}$, at $x=315, 358$ and 400. Here, the body force's strength is reduced to one tenth of the original, because too strong force at upstream will contaminate the boundary layer. A much lower mode energy is obtained for the case with $x_{start}=358$ compared to the one with $x_{start}=400$ because $x_{start}$ of the former case is closer to the neutral point at $x=134$, as pointed out in the sensitivity analyses. Figure \ref{f:streamforce2} further depicts the reduction of the maximum streamwise velocity of the primary mode downstream of $x_{start}$. The largest reduction is given for the case with $x_{start}=315$ in the vicinity of $x_{start}$, where the actuated body-force integration is small and therefore the sensitivity analyses based on the linear assumption are still acceptable. However, downstream of $x_{start}+18.7$, the primary mode suppression becomes weaker and weaker for the case with $x_{start}=315$ because here disturbances are introduced so far upstream that they contaminate the essentially quiet boundary layer. This explains why the case with $x_{start}=358$ provides the most effective flow-transition delay control, as shown in Figure \ref{f:streamforce}.
-接下来进行等离子体激发器流向位置效应的研究。需要提及的是，在每一个流向位置，本文都测试了诸多展向控制位置，并且将其中最好的一个算例选取出来进行比较。每一个位置的激发器展向效应与之前给出的类似，这里便不再赘述。研究方法依然选用的是NPSE。读者可以回忆之前敏感性分析的结果，不论是基于LST的敏感性分析还是基于PSE的敏感性分析，都支出在失稳区域越上游控制越有效。图\ref{f:streamforce}对比了控制开始于
+接下来进行等离子体激发器流向位置效应的研究。需要提及的是，在每一个流向位置，本文都测试了诸多展向控制位置，并且将其中最好的一个算例选取出来进行比较。每一个位置的激发器展向效应与之前给出的类似，这里便不再赘述。研究方法依然选用的是NPSE。图\ref{f:streamforce}对比了控制开始于$x_{\rm start}=315, 358, 400$位置处的控制效果。这里每一个控制算例的展流向激励长度，也就是等离子体在流向延伸的长度是相同的。由于转捩主要还是由主模态主导的，这里主要对比了主模态的能量。这里用到的体积力是之前算例的十分之一，这是因为在上游扰动非常弱，并不需要太强的体积力。体积力过强反而会污染干净的边界层。控制起始于$x_{start}=358$的算例中的主模态能量要远远小于控制起始于$x_{start}=400$算例中的主模态能量，这是因为前者的控制区域更靠近中性点$x=134$，控制的区域边界层内本身有的扰动较弱，所以控制效率较高。读者可以回忆之前敏感性分析的结果，不论是基于LST的敏感性分析还是基于PSE的敏感性分析，都指出在失稳区域，越上游控制越有效。这两个算例的结果对比符合之前敏感性分析给出的结论。图\ref{f:streamforce2}对比了主模态流向扰动速度在控制区域的变化。这里横坐标是距控制起始位置的距离，也就是$x-x_{\rm start}$。可以看到，在刚刚开始的位置，也就是靠近控制起始点$x_{start}$附近，算例$x_{start}=315$中主模态流向扰动速度下降的最快，也下降的最多。在这一阶段，总的施加于流动上的体积力还不多，所以添加的体积力还很小，满足小扰动假设。因此敏感性分析的结论依然成立，也就是控制越靠上游，效果越好。但是在$x_{start}+18.7$之后，$x_{start}=315$算例的结果与另外两个算例的结果分道扬镳，其主模态不在是减弱，而是开始增长。这就是因为体积力引入的新的扰动已经盖过了原有的扰动，并开始主导失稳过程。需要说明的是，这里曲线出现了很突然的拐折并不是计算的问题，而是因为图中展示的主模态流向扰动速度在横截面上的最大值，当最大值从一个空间位置跳变到另一个空间位置，就会出现导数的不连续。从上面的结果对比，可以做出结论——适当的流向控制位置非常关键。
 
-Figure \ref{modesenergycase3} gives the LST results of the growth rate of steady crossflow modes for Case 2, where the crossflow velocity is doubled to investigate the operating voltage effect. The first unstable mode appears at $x =85$, with $\beta$ of 0.05; the maximum mode growth rate is 0.0336 with $\beta$ of 0.26 at $x =451$. The neutral-curve slope of the upper branch is smaller than that for Case 1. Figure \ref{growthratecase3} further shows the evolution of the mode energy obtained using NPSE. The simulated wave numbers are 0.1, 0.2, 0.3 and 0.4. The mode with $\beta$ of 0.1 becomes the most unstable upstream but increases slowly compared to the others. Due to its relatively early start and large increase rate, the mode with $\beta$ of 0.2 is chosen as the target mode in the following study.
-
-%\begin{figure}
-%  \centering
-%  % Requires \usepackage{graphicx}
-%  \begin{subfigure}{0.48\linewidth}
-%    \label{modesenergycase3}
-%    \includegraphics[width=\linewidth]{ch3/growthratecase2.eps}
-%  \end{subfigure}
-%  \begin{subfigure}{0.48\linewidth}
-%    \label{growthratecase3}
-%    \includegraphics[width=\linewidth]{ch3/umax4case2.eps}
-%  \end{subfigure}
-%  \caption{Growth rate of steady crossflow modes (a) and evolution of mode energy (b) computed using LST and NPSE, respectively.}\label{f:baseline}
-%\end{figure}
-The results of the sensitivity analyses (not shown) are similar to those for Case 1. The higher freestream spanwise velocity in Case 2 allows us to adopt higher operating voltages of 9kV and 10kV. Figure \ref{f:voltage} compares the streamwise mode-energy evolution with different operating actuator voltages. The actuation region ranges from 500 to 550 in the $x$ direction with the optimum spanwise location for each case. The simulated operating voltages are 8 kV, 9 kV and 10 kV, with corresponding maximum jet velocity magnitudes of 1.7 m/s, 2.8 m/s and 3.8 m/s, respectively. Note that only 8,9,10,11,12 kV voltages were provided in the measurement \cite{kriegseis2013velocity} and the last two were too strong for our case. An increase in operating voltage leads to more efficient disturbance suppression upstream for $x = 530$. However, for the case with a 10 kV operating voltage, the disturbance energy starts to increase downstream for $x = 530$, and the energy of the mean flow distortion mode (0, 0) as well as the harmonic mode (0, 2) even exceeds the energy of the primary mode (0, 1). Eventually the harmonic mode (0, 2) dominates the flow. Forcing that is too strong may cause the formation of nocent vortices that promote transition to turbulence, as also reported by the DNS study \cite{dorr2016}. Therefore, it can be concluded that for Case 2, the moderate operating voltage of 9 kV provides the most effective flow-transition delay control.
+对于Case2，本文也做了无控制的线性稳定性分析，非线性抛物化扰动方程的计算寻找特征模态，并用之前推导出来的敏感性方程做了敏感性分析。但由于结果与Case1的结果非常类似，这里便不再展示。唯一需要提及的是这一次主导转捩的模态的展向波数$\beta$变成了0.2。这里重点研究一下不同展向电压的激励，对控制效果的影响。在这个算例中，边界层外的展向速度是签一个算例的两倍，这就意味着此算例需要更强的体积力来控制。在之前算例中过强的激励电压，9kV和10kV都有了用武之地。图\ref{f:voltage}对比了不同激励电压下各阶模态能量的变化。这里依然是选取了最佳的展向控制位置的结果。控制的流向区域从500到500，在图中用两个黑色的大圆点标识出来。绿、蓝、红分别是8、 9、 10kV电压的控制结果。这三个电压在静止的流场中分别可以吹出来最大速度1.7、 2.8、 3.8m/s的射流。之所以选这三个电压是因为在Kriegseis等人\cite{kriegseis2013velocity}的实验中，只测了8、 9、 10、 11、 12kV五个电压的等离子体分布，而最后两个电压太高，会在边界层中引入额外的扰动，所以这里只对比了前三个。从\ref{f:voltage}中可以看到，在控制区域的前半段，也就是$x = 530$之前，三个算例中的扰动能量都受到了抑制，比无控制的结果的（图中的黑线）低。但是在10kV的算例中，扰动在控制区域的后半段开始大幅的增长，尤其是(0,0)和(0,2)模态，甚至超过了主模态的能量。前人在用DBD控制横流的DNS结果\cite{dorr2016}中也提到了过强的体积力会产生有害于流动稳定的涡，从而使转捩提前。因此，在这个工况下，中等的电压强度——9kV，是最佳的选择。
 
 \begin{figure}
   \centering
   % Requires \usepackage{graphicx}
   \includegraphics[width=\linewidth]{ch3/compare754-843(3).eps}\\
-  \caption{Evolution of modes energy controlled by plasma actuator with different operating voltage}\label{f:voltage}
+  \caption{采用不同电压控制下的各阶模态演化}\label{f:voltage}
 \end{figure}
+
+\section{本章小结}
+在这一章中，本文对典型的三维边界层流动——后掠Hiemenz流动——的失稳过程进行了敏感性分析，并提出了一种基于直接抑制主模态的等离子体谐波控制方案。敏感性分析的结果指出，在低速条带下方，也就是横流涡下方偏下扫的位置处添加正方向的体积力可以抑制扰动的发展，后续的NPSE计算也验证了这一结果。之后在等离子体激发器的流向位置效应和电压效应的研究中，发现所添加体积力的强度一点要与当地所存在的扰动强度相当。太弱起不到控制的效果，太强会引入新的扰动主导失稳过程，反而会促进转捩。
